language/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    PAR

Grammar

Rule 0     S' -> expression
Rule 1     expression -> AJOUTER GROUPE TEXT
Rule 2     expression -> SUPPRIMER PERSONNE NOM EQUALS noms facul2
Rule 3     expression -> AFFICHER PERSONNE
Rule 4     expression -> AFFICHER PERSONNE facul3
Rule 5     facul3 -> NOM EQUALS noms facul2
Rule 6     facul3 -> facul2
Rule 7     facul2 -> PRENOM EQUALS prenoms facul
Rule 8     facul2 -> facul
Rule 9     expression -> AJOUTER PERSONNE NOM EQUALS noms PRENOM EQUALS prenoms facul
Rule 10    noms -> ID
Rule 11    noms -> ID noms
Rule 12    prenoms -> ID
Rule 13    prenoms -> ID prenoms
Rule 14    condition_modif -> attribut EQUALS element
Rule 15    condition_modif -> attribut EQUALS element ET condition_modif
Rule 16    attribut -> NOM
Rule 17    attribut -> PRENOM
Rule 18    attribut -> ADRS
Rule 19    attribut -> SEXE
Rule 20    attribut -> PROMOTION
Rule 21    attribut -> MAIL
Rule 22    attribut -> LIEUNAIS
Rule 23    attribut -> NUMERO
Rule 24    attribut -> LOGIN
Rule 25    attribut -> MDPASS
Rule 26    attribut -> DATENAIS
Rule 27    element -> ID
Rule 28    element -> TEXT
Rule 29    element -> NUM
Rule 30    element -> MAILXP
Rule 31    element -> DATE
Rule 32    element -> PROMOXP
Rule 33    element -> SEX
Rule 34    expression -> MODIFIER attribut PERSONNE condition_modif NOUVEAU EQUALS element
Rule 35    facul -> date_naiss facul
Rule 36    facul -> sexuality facul
Rule 37    facul -> lieu_nais facul
Rule 38    facul -> adresses facul
Rule 39    facul -> type facul
Rule 40    facul -> promotion facul
Rule 41    facul -> login facul
Rule 42    facul -> mail facul
Rule 43    facul -> mdp facul
Rule 44    facul -> numero facul
Rule 45    facul -> <empty>
Rule 46    date_naiss -> DATENAIS EQUALS DATE
Rule 47    sexuality -> SEXE EQUALS SEX
Rule 48    adresses -> ADRS EQUALS TEXT
Rule 49    lieu_nais -> LIEUNAIS EQUALS TEXT
Rule 50    type -> TYPE EQUALS NUM
Rule 51    promotion -> PROMOTION EQUALS PROMOXP
Rule 52    mdp -> MDPASS EQUALS TEXT
Rule 53    numero -> NUMERO EQUALS NUM
Rule 54    mail -> MAIL EQUALS MAILXP
Rule 55    login -> LOGIN EQUALS ID
Rule 56    expression -> AFFICHER GROUPE
Rule 57    expression -> AFFICHER UV
Rule 58    expression -> AFFICHER MODULE facul_uv
Rule 59    facul_uv -> UV EQUALS TEXT
Rule 60    expression -> MODIFIER GROUPE condition_modifier_groupe NOUVEAU EQUALS TEXT
Rule 61    condition_modifier_groupe -> NOM EQUALS TEXT
Rule 62    expression -> SUPPRIMER GROUPE TEXT
Rule 63    expression -> AJOUTER UV TEXT NUM EQUALS FLOAT
Rule 64    expression -> MODIFIER UV condition_modifier_uv NOUVEAU EQUALS TEXT
Rule 65    condition_modifier_uv -> NOM EQUALS TEXT
Rule 66    expression -> SUPPRIMER UV TEXT
Rule 67    expression -> AJOUTER MODULE TEXT UV EQUALS TEXT
Rule 68    expression -> MODIFIER MODULE condition_modifier_module but_modifier_module
Rule 69    condition_modifier_module -> NOM EQUALS TEXT
Rule 70    but_modifier_module -> NOUVEAU EQUALS TEXT
Rule 71    but_modifier_module -> NOUVEAU EQUALS TEXT UV EQUALS TEXT
Rule 72    expression -> SUPPRIMER MODULE TEXT

Terminals, with rules where they appear

ADRS                 : 18 48
AFFICHER             : 3 4 56 57 58
AJOUTER              : 1 9 63 67
DATE                 : 31 46
DATENAIS             : 26 46
EQUALS               : 2 5 7 9 9 14 15 34 46 47 48 49 50 51 52 53 54 55 59 60 61 63 64 65 67 69 70 71 71
ET                   : 15
FLOAT                : 63
GROUPE               : 1 56 60 62
ID                   : 10 11 12 13 27 55
LIEUNAIS             : 22 49
LOGIN                : 24 55
MAIL                 : 21 54
MAILXP               : 30 54
MDPASS               : 25 52
MODIFIER             : 34 60 64 68
MODULE               : 58 67 68 72
NOM                  : 2 5 9 16 61 65 69
NOUVEAU              : 34 60 64 70 71
NUM                  : 29 50 53 63
NUMERO               : 23 53
PAR                  : 
PERSONNE             : 2 3 4 9 34
PRENOM               : 7 9 17
PROMOTION            : 20 51
PROMOXP              : 32 51
SEX                  : 33 47
SEXE                 : 19 47
SUPPRIMER            : 2 62 66 72
TEXT                 : 1 28 48 49 52 59 60 61 62 63 64 65 66 67 67 69 70 71 71 72
TYPE                 : 50
UV                   : 57 59 63 64 66 67 71
error                : 

Nonterminals, with rules where they appear

adresses             : 38
attribut             : 14 15 34
but_modifier_module  : 68
condition_modif      : 15 34
condition_modifier_groupe : 60
condition_modifier_module : 68
condition_modifier_uv : 64
date_naiss           : 35
element              : 14 15 34
expression           : 0
facul                : 7 8 9 35 36 37 38 39 40 41 42 43 44
facul2               : 2 5 6
facul3               : 4
facul_uv             : 58
lieu_nais            : 37
login                : 41
mail                 : 42
mdp                  : 43
noms                 : 2 5 9 11
numero               : 44
prenoms              : 7 9 13
promotion            : 40
sexuality            : 36
type                 : 39

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . AJOUTER GROUPE TEXT
    (2) expression -> . SUPPRIMER PERSONNE NOM EQUALS noms facul2
    (3) expression -> . AFFICHER PERSONNE
    (4) expression -> . AFFICHER PERSONNE facul3
    (9) expression -> . AJOUTER PERSONNE NOM EQUALS noms PRENOM EQUALS prenoms facul
    (34) expression -> . MODIFIER attribut PERSONNE condition_modif NOUVEAU EQUALS element
    (56) expression -> . AFFICHER GROUPE
    (57) expression -> . AFFICHER UV
    (58) expression -> . AFFICHER MODULE facul_uv
    (60) expression -> . MODIFIER GROUPE condition_modifier_groupe NOUVEAU EQUALS TEXT
    (62) expression -> . SUPPRIMER GROUPE TEXT
    (63) expression -> . AJOUTER UV TEXT NUM EQUALS FLOAT
    (64) expression -> . MODIFIER UV condition_modifier_uv NOUVEAU EQUALS TEXT
    (66) expression -> . SUPPRIMER UV TEXT
    (67) expression -> . AJOUTER MODULE TEXT UV EQUALS TEXT
    (68) expression -> . MODIFIER MODULE condition_modifier_module but_modifier_module
    (72) expression -> . SUPPRIMER MODULE TEXT

    AJOUTER         shift and go to state 2
    SUPPRIMER       shift and go to state 4
    AFFICHER        shift and go to state 3
    MODIFIER        shift and go to state 5

    expression                     shift and go to state 1

state 1

    (0) S' -> expression .



state 2

    (1) expression -> AJOUTER . GROUPE TEXT
    (9) expression -> AJOUTER . PERSONNE NOM EQUALS noms PRENOM EQUALS prenoms facul
    (63) expression -> AJOUTER . UV TEXT NUM EQUALS FLOAT
    (67) expression -> AJOUTER . MODULE TEXT UV EQUALS TEXT

    GROUPE          shift and go to state 8
    PERSONNE        shift and go to state 7
    UV              shift and go to state 9
    MODULE          shift and go to state 6


state 3

    (3) expression -> AFFICHER . PERSONNE
    (4) expression -> AFFICHER . PERSONNE facul3
    (56) expression -> AFFICHER . GROUPE
    (57) expression -> AFFICHER . UV
    (58) expression -> AFFICHER . MODULE facul_uv

    PERSONNE        shift and go to state 12
    GROUPE          shift and go to state 13
    UV              shift and go to state 11
    MODULE          shift and go to state 10


state 4

    (2) expression -> SUPPRIMER . PERSONNE NOM EQUALS noms facul2
    (62) expression -> SUPPRIMER . GROUPE TEXT
    (66) expression -> SUPPRIMER . UV TEXT
    (72) expression -> SUPPRIMER . MODULE TEXT

    PERSONNE        shift and go to state 16
    GROUPE          shift and go to state 17
    UV              shift and go to state 15
    MODULE          shift and go to state 14


state 5

    (34) expression -> MODIFIER . attribut PERSONNE condition_modif NOUVEAU EQUALS element
    (60) expression -> MODIFIER . GROUPE condition_modifier_groupe NOUVEAU EQUALS TEXT
    (64) expression -> MODIFIER . UV condition_modifier_uv NOUVEAU EQUALS TEXT
    (68) expression -> MODIFIER . MODULE condition_modifier_module but_modifier_module
    (16) attribut -> . NOM
    (17) attribut -> . PRENOM
    (18) attribut -> . ADRS
    (19) attribut -> . SEXE
    (20) attribut -> . PROMOTION
    (21) attribut -> . MAIL
    (22) attribut -> . LIEUNAIS
    (23) attribut -> . NUMERO
    (24) attribut -> . LOGIN
    (25) attribut -> . MDPASS
    (26) attribut -> . DATENAIS

    GROUPE          shift and go to state 30
    UV              shift and go to state 23
    MODULE          shift and go to state 18
    NOM             shift and go to state 22
    PRENOM          shift and go to state 20
    ADRS            shift and go to state 24
    SEXE            shift and go to state 28
    PROMOTION       shift and go to state 19
    MAIL            shift and go to state 32
    LIEUNAIS        shift and go to state 26
    NUMERO          shift and go to state 27
    LOGIN           shift and go to state 25
    MDPASS          shift and go to state 21
    DATENAIS        shift and go to state 29

    attribut                       shift and go to state 31

state 6

    (67) expression -> AJOUTER MODULE . TEXT UV EQUALS TEXT

    TEXT            shift and go to state 33


state 7

    (9) expression -> AJOUTER PERSONNE . NOM EQUALS noms PRENOM EQUALS prenoms facul

    NOM             shift and go to state 34


state 8

    (1) expression -> AJOUTER GROUPE . TEXT

    TEXT            shift and go to state 35


state 9

    (63) expression -> AJOUTER UV . TEXT NUM EQUALS FLOAT

    TEXT            shift and go to state 36


state 10

    (58) expression -> AFFICHER MODULE . facul_uv
    (59) facul_uv -> . UV EQUALS TEXT

    UV              shift and go to state 38

    facul_uv                       shift and go to state 37

state 11

    (57) expression -> AFFICHER UV .

    $end            reduce using rule 57 (expression -> AFFICHER UV .)


state 12

    (3) expression -> AFFICHER PERSONNE .
    (4) expression -> AFFICHER PERSONNE . facul3
    (5) facul3 -> . NOM EQUALS noms facul2
    (6) facul3 -> . facul2
    (7) facul2 -> . PRENOM EQUALS prenoms facul
    (8) facul2 -> . facul
    (35) facul -> . date_naiss facul
    (36) facul -> . sexuality facul
    (37) facul -> . lieu_nais facul
    (38) facul -> . adresses facul
    (39) facul -> . type facul
    (40) facul -> . promotion facul
    (41) facul -> . login facul
    (42) facul -> . mail facul
    (43) facul -> . mdp facul
    (44) facul -> . numero facul
    (45) facul -> .
    (46) date_naiss -> . DATENAIS EQUALS DATE
    (47) sexuality -> . SEXE EQUALS SEX
    (49) lieu_nais -> . LIEUNAIS EQUALS TEXT
    (48) adresses -> . ADRS EQUALS TEXT
    (50) type -> . TYPE EQUALS NUM
    (51) promotion -> . PROMOTION EQUALS PROMOXP
    (55) login -> . LOGIN EQUALS ID
    (54) mail -> . MAIL EQUALS MAILXP
    (52) mdp -> . MDPASS EQUALS TEXT
    (53) numero -> . NUMERO EQUALS NUM

  ! reduce/reduce conflict for $end resolved using rule 3 (expression -> AFFICHER PERSONNE .)
    $end            reduce using rule 3 (expression -> AFFICHER PERSONNE .)
    NOM             shift and go to state 44
    PRENOM          shift and go to state 57
    DATENAIS        shift and go to state 41
    SEXE            shift and go to state 63
    LIEUNAIS        shift and go to state 49
    ADRS            shift and go to state 47
    TYPE            shift and go to state 53
    PROMOTION       shift and go to state 39
    LOGIN           shift and go to state 60
    MAIL            shift and go to state 55
    MDPASS          shift and go to state 42
    NUMERO          shift and go to state 54

  ! $end            [ reduce using rule 45 (facul -> .) ]

    login                          shift and go to state 40
    sexuality                      shift and go to state 52
    mdp                            shift and go to state 51
    promotion                      shift and go to state 56
    lieu_nais                      shift and go to state 46
    facul3                         shift and go to state 43
    type                           shift and go to state 58
    numero                         shift and go to state 61
    mail                           shift and go to state 45
    date_naiss                     shift and go to state 59
    adresses                       shift and go to state 48
    facul2                         shift and go to state 50
    facul                          shift and go to state 62

state 13

    (56) expression -> AFFICHER GROUPE .

    $end            reduce using rule 56 (expression -> AFFICHER GROUPE .)


state 14

    (72) expression -> SUPPRIMER MODULE . TEXT

    TEXT            shift and go to state 64


state 15

    (66) expression -> SUPPRIMER UV . TEXT

    TEXT            shift and go to state 65


state 16

    (2) expression -> SUPPRIMER PERSONNE . NOM EQUALS noms facul2

    NOM             shift and go to state 66


state 17

    (62) expression -> SUPPRIMER GROUPE . TEXT

    TEXT            shift and go to state 67


state 18

    (68) expression -> MODIFIER MODULE . condition_modifier_module but_modifier_module
    (69) condition_modifier_module -> . NOM EQUALS TEXT

    NOM             shift and go to state 69

    condition_modifier_module      shift and go to state 68

state 19

    (20) attribut -> PROMOTION .

    EQUALS          reduce using rule 20 (attribut -> PROMOTION .)
    PERSONNE        reduce using rule 20 (attribut -> PROMOTION .)


state 20

    (17) attribut -> PRENOM .

    EQUALS          reduce using rule 17 (attribut -> PRENOM .)
    PERSONNE        reduce using rule 17 (attribut -> PRENOM .)


state 21

    (25) attribut -> MDPASS .

    EQUALS          reduce using rule 25 (attribut -> MDPASS .)
    PERSONNE        reduce using rule 25 (attribut -> MDPASS .)


state 22

    (16) attribut -> NOM .

    EQUALS          reduce using rule 16 (attribut -> NOM .)
    PERSONNE        reduce using rule 16 (attribut -> NOM .)


state 23

    (64) expression -> MODIFIER UV . condition_modifier_uv NOUVEAU EQUALS TEXT
    (65) condition_modifier_uv -> . NOM EQUALS TEXT

    NOM             shift and go to state 70

    condition_modifier_uv          shift and go to state 71

state 24

    (18) attribut -> ADRS .

    EQUALS          reduce using rule 18 (attribut -> ADRS .)
    PERSONNE        reduce using rule 18 (attribut -> ADRS .)


state 25

    (24) attribut -> LOGIN .

    EQUALS          reduce using rule 24 (attribut -> LOGIN .)
    PERSONNE        reduce using rule 24 (attribut -> LOGIN .)


state 26

    (22) attribut -> LIEUNAIS .

    EQUALS          reduce using rule 22 (attribut -> LIEUNAIS .)
    PERSONNE        reduce using rule 22 (attribut -> LIEUNAIS .)


state 27

    (23) attribut -> NUMERO .

    EQUALS          reduce using rule 23 (attribut -> NUMERO .)
    PERSONNE        reduce using rule 23 (attribut -> NUMERO .)


state 28

    (19) attribut -> SEXE .

    EQUALS          reduce using rule 19 (attribut -> SEXE .)
    PERSONNE        reduce using rule 19 (attribut -> SEXE .)


state 29

    (26) attribut -> DATENAIS .

    EQUALS          reduce using rule 26 (attribut -> DATENAIS .)
    PERSONNE        reduce using rule 26 (attribut -> DATENAIS .)


state 30

    (60) expression -> MODIFIER GROUPE . condition_modifier_groupe NOUVEAU EQUALS TEXT
    (61) condition_modifier_groupe -> . NOM EQUALS TEXT

    NOM             shift and go to state 72

    condition_modifier_groupe      shift and go to state 73

state 31

    (34) expression -> MODIFIER attribut . PERSONNE condition_modif NOUVEAU EQUALS element

    PERSONNE        shift and go to state 74


state 32

    (21) attribut -> MAIL .

    EQUALS          reduce using rule 21 (attribut -> MAIL .)
    PERSONNE        reduce using rule 21 (attribut -> MAIL .)


state 33

    (67) expression -> AJOUTER MODULE TEXT . UV EQUALS TEXT

    UV              shift and go to state 75


state 34

    (9) expression -> AJOUTER PERSONNE NOM . EQUALS noms PRENOM EQUALS prenoms facul

    EQUALS          shift and go to state 76


state 35

    (1) expression -> AJOUTER GROUPE TEXT .

    $end            reduce using rule 1 (expression -> AJOUTER GROUPE TEXT .)


state 36

    (63) expression -> AJOUTER UV TEXT . NUM EQUALS FLOAT

    NUM             shift and go to state 77


state 37

    (58) expression -> AFFICHER MODULE facul_uv .

    $end            reduce using rule 58 (expression -> AFFICHER MODULE facul_uv .)


state 38

    (59) facul_uv -> UV . EQUALS TEXT

    EQUALS          shift and go to state 78


state 39

    (51) promotion -> PROMOTION . EQUALS PROMOXP

    EQUALS          shift and go to state 79


state 40

    (41) facul -> login . facul
    (35) facul -> . date_naiss facul
    (36) facul -> . sexuality facul
    (37) facul -> . lieu_nais facul
    (38) facul -> . adresses facul
    (39) facul -> . type facul
    (40) facul -> . promotion facul
    (41) facul -> . login facul
    (42) facul -> . mail facul
    (43) facul -> . mdp facul
    (44) facul -> . numero facul
    (45) facul -> .
    (46) date_naiss -> . DATENAIS EQUALS DATE
    (47) sexuality -> . SEXE EQUALS SEX
    (49) lieu_nais -> . LIEUNAIS EQUALS TEXT
    (48) adresses -> . ADRS EQUALS TEXT
    (50) type -> . TYPE EQUALS NUM
    (51) promotion -> . PROMOTION EQUALS PROMOXP
    (55) login -> . LOGIN EQUALS ID
    (54) mail -> . MAIL EQUALS MAILXP
    (52) mdp -> . MDPASS EQUALS TEXT
    (53) numero -> . NUMERO EQUALS NUM

    $end            reduce using rule 45 (facul -> .)
    DATENAIS        shift and go to state 41
    SEXE            shift and go to state 63
    LIEUNAIS        shift and go to state 49
    ADRS            shift and go to state 47
    TYPE            shift and go to state 53
    PROMOTION       shift and go to state 39
    LOGIN           shift and go to state 60
    MAIL            shift and go to state 55
    MDPASS          shift and go to state 42
    NUMERO          shift and go to state 54

    login                          shift and go to state 40
    sexuality                      shift and go to state 52
    promotion                      shift and go to state 56
    type                           shift and go to state 58
    numero                         shift and go to state 61
    mail                           shift and go to state 45
    lieu_nais                      shift and go to state 46
    adresses                       shift and go to state 48
    date_naiss                     shift and go to state 59
    facul                          shift and go to state 80
    mdp                            shift and go to state 51

state 41

    (46) date_naiss -> DATENAIS . EQUALS DATE

    EQUALS          shift and go to state 81


state 42

    (52) mdp -> MDPASS . EQUALS TEXT

    EQUALS          shift and go to state 82


state 43

    (4) expression -> AFFICHER PERSONNE facul3 .

    $end            reduce using rule 4 (expression -> AFFICHER PERSONNE facul3 .)


state 44

    (5) facul3 -> NOM . EQUALS noms facul2

    EQUALS          shift and go to state 83


state 45

    (42) facul -> mail . facul
    (35) facul -> . date_naiss facul
    (36) facul -> . sexuality facul
    (37) facul -> . lieu_nais facul
    (38) facul -> . adresses facul
    (39) facul -> . type facul
    (40) facul -> . promotion facul
    (41) facul -> . login facul
    (42) facul -> . mail facul
    (43) facul -> . mdp facul
    (44) facul -> . numero facul
    (45) facul -> .
    (46) date_naiss -> . DATENAIS EQUALS DATE
    (47) sexuality -> . SEXE EQUALS SEX
    (49) lieu_nais -> . LIEUNAIS EQUALS TEXT
    (48) adresses -> . ADRS EQUALS TEXT
    (50) type -> . TYPE EQUALS NUM
    (51) promotion -> . PROMOTION EQUALS PROMOXP
    (55) login -> . LOGIN EQUALS ID
    (54) mail -> . MAIL EQUALS MAILXP
    (52) mdp -> . MDPASS EQUALS TEXT
    (53) numero -> . NUMERO EQUALS NUM

    $end            reduce using rule 45 (facul -> .)
    DATENAIS        shift and go to state 41
    SEXE            shift and go to state 63
    LIEUNAIS        shift and go to state 49
    ADRS            shift and go to state 47
    TYPE            shift and go to state 53
    PROMOTION       shift and go to state 39
    LOGIN           shift and go to state 60
    MAIL            shift and go to state 55
    MDPASS          shift and go to state 42
    NUMERO          shift and go to state 54

    login                          shift and go to state 40
    sexuality                      shift and go to state 52
    promotion                      shift and go to state 56
    type                           shift and go to state 58
    numero                         shift and go to state 61
    mail                           shift and go to state 45
    lieu_nais                      shift and go to state 46
    adresses                       shift and go to state 48
    date_naiss                     shift and go to state 59
    facul                          shift and go to state 84
    mdp                            shift and go to state 51

state 46

    (37) facul -> lieu_nais . facul
    (35) facul -> . date_naiss facul
    (36) facul -> . sexuality facul
    (37) facul -> . lieu_nais facul
    (38) facul -> . adresses facul
    (39) facul -> . type facul
    (40) facul -> . promotion facul
    (41) facul -> . login facul
    (42) facul -> . mail facul
    (43) facul -> . mdp facul
    (44) facul -> . numero facul
    (45) facul -> .
    (46) date_naiss -> . DATENAIS EQUALS DATE
    (47) sexuality -> . SEXE EQUALS SEX
    (49) lieu_nais -> . LIEUNAIS EQUALS TEXT
    (48) adresses -> . ADRS EQUALS TEXT
    (50) type -> . TYPE EQUALS NUM
    (51) promotion -> . PROMOTION EQUALS PROMOXP
    (55) login -> . LOGIN EQUALS ID
    (54) mail -> . MAIL EQUALS MAILXP
    (52) mdp -> . MDPASS EQUALS TEXT
    (53) numero -> . NUMERO EQUALS NUM

    $end            reduce using rule 45 (facul -> .)
    DATENAIS        shift and go to state 41
    SEXE            shift and go to state 63
    LIEUNAIS        shift and go to state 49
    ADRS            shift and go to state 47
    TYPE            shift and go to state 53
    PROMOTION       shift and go to state 39
    LOGIN           shift and go to state 60
    MAIL            shift and go to state 55
    MDPASS          shift and go to state 42
    NUMERO          shift and go to state 54
